--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,12 +6,35 @@ $color-light-sandy: rgb(239, 236, 202);
 $color-blue: rgb(4, 99, 128);
 $color-grey: rgb(86, 86, 86);
 
+* {
+  font-family: monospace;
+}
+
 header {
   background: $color-grey;
 }
 
 .title {
   background: $color-sandy;
+}
+
+.error_animation {
+  animation-name: shadow_flash;
+  animation-duration: 1s;
+}
+
+.error {
+  color: red;
+
+}
+
+@keyframes shadow_flash {
+    from {color: red;}
+    to {color: white;}
+}
+
+.container {
+  box-shadow: 0px 10px 32px 0px rgba(0,0,0,0.75);
 }
 
 a {
